--- a/HighCards/app/src/main/AndroidManifest.xml
+++ b/HighCards/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".menu_secundario"
             android:screenOrientation="landscape"
             >
 
@@ -22,6 +22,16 @@
 
 
         <activity android:name=".Game"
+            android:screenOrientation="landscape"
+
+            />
+
+        <activity android:name=".MainActivity"
+            android:screenOrientation="landscape"
+
+            />
+
+        <activity android:name=".instrucoes"
             android:screenOrientation="landscape"
 
             />
