--- a/HighCards/app/src/main/AndroidManifest.xml
+++ b/HighCards/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.martins.highcards">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -8,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".menu_secundario"
+        <activity android:name=".MainActivity"
             android:screenOrientation="landscape"
             >
 
@@ -26,7 +28,7 @@
 
             />
 
-        <activity android:name=".MainActivity"
+        <activity android:name=".menu_secundario"
             android:screenOrientation="landscape"
 
             />
@@ -35,7 +37,10 @@
             android:screenOrientation="landscape"
 
             />
+        <activity android:name=".ClientSocket"
+            android:screenOrientation="landscape"
 
+            />
 
     </application>
 
